# Weather_App_Using-FAST-API_structured

./: README.md  alembic.ini  pyproject.toml
fast_api/: Dockerfile  README.md  __main__.py  alembic.ini  docker-compose.yml  log.py  pyproject.toml  settings.py
fast_api/db/: base.py  dependencies.py  meta.py
fast_api/db/dao/: __init__.py  user_dao.py  weather_dao.py
fast_api/db/migrations/: env.py
fast_api/db/migrations/versions/: 9365e8f5c0fb_add_users_and_saved_weather_tables.py
fast_api/db/models/: __init__.py  saved_weather_model.py  user_model.py
fast_api/fast_api/: __init__.py  __main__.py  log.py  settings.py
fast_api/fast_api/db/: base.py  dependencies.py  utils.py
fast_api/fast_api/db/migrations/versions/: 2026-04-24-12-12_9365e8f5c0fb.py
fast_api/fast_api/db/models/: __init__.py  saved_weather.py  user.py
fast_api/fast_api/services/: __init__.py  auth.py  dependencies.py  weather.py
fast_api/fast_api/web/: __init__.py  application.py  lifespan.py
fast_api/fast_api/web/api/: __init__.py  auth.py  router.py  weather.py
fast_api/fast_api/web/api/monitoring/: __init__.py
fast_api/services/: auth.py  dependencies.py  weather.py
fast_api/tests/: __init__.py  conftest.py
fast_api/web/: application.py  lifespan.py
fast_api/web/api/: router.py
fast_api/web/api/auth/: __init__.py  schema.py  views.py
fast_api/web/api/monitoring/: __init__.py  views.py
fast_api/web/api/weather/: __init__.py  schema.py  views.py
frontend/: index.html
tests/: conftest.py  test_auth.py  test_health.py  test_weather.py
